--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url=${JDBC_DATABASE_URL:}
 spring.datasource.username=${JDBC_DATABASE_USERNAME}
 spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 spring.jpa.generate-ddl=true
-server.port=8080
+server.port=${PORT:8080}
 spring.jpa.show-sql=true
 
 
