--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,18 @@
 
-spring.datasource.url=${JDBC_DATABASE_URL:}
+spring.datasource.url=${JDBC_DATABASE_URL}
 spring.datasource.username=${JDBC_DATABASE_USERNAME}
 spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 spring.jpa.generate-ddl=true
 server.port=${PORT:8080}
 spring.jpa.show-sql=true
-
-
 grokonez.app.jwtSecret=jwtGrokonezSecretKey
 grokonez.app.jwtExpiration=86400
 
-#
-#spring.datasource.url=jdbc:mysql://b5129689357154:c49b65e0@eu-cdbr-west-02.cleardb.net/heroku_ecd2b0693118470?reconnect=true
-#spring.datasource.username=b5129689357154
-#spring.datasource.password=c49b65e0
-#spring.jpa.generate-ddl=true
-#server.port=8080
-#spring.jpa.show-sql=true
-#
-#
-#grokonez.app.jwtSecret=jwtGrokonezSecretKey
-#grokonez.app.jwtExpiration=86400
+# spring.datasource.url=jdbc:mysql://localhost:3306/naftaldb?serverTimezone=UTC
+# spring.datasource.username=root
+# spring.datasource.password=root
+# spring.jpa.generate-ddl=true
+# server.port=8080
+# spring.jpa.show-sql=true
+# grokonez.app.jwtSecret=jwtGrokonezSecretKey
+# grokonez.app.jwtExpiration=86400
