--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,11 +8,12 @@ spring.jpa.show-sql=true
 grokonez.app.jwtSecret=jwtGrokonezSecretKey
 grokonez.app.jwtExpiration=86400
 
-# spring.datasource.url=jdbc:mysql://localhost:3306/naftaldb?serverTimezone=UTC
-# spring.datasource.username=root
-# spring.datasource.password=root
-# spring.jpa.generate-ddl=true
-# server.port=8080
-# spring.jpa.show-sql=true
-# grokonez.app.jwtSecret=jwtGrokonezSecretKey
-# grokonez.app.jwtExpiration=86400
+#  spring.datasource.url=jdbc:mysql://localhost:3306/naftaldb?serverTimezone=UTC
+#  spring.datasource.username=root
+#  spring.datasource.password=root
+#  spring.jpa.generate-ddl=true
+# spring.jpa.properties.hibernate.generate_statistics=true
+#  server.port=8080
+#  spring.jpa.show-sql=true
+#  grokonez.app.jwtSecret=jwtGrokonezSecretKey
+#  grokonez.app.jwtExpiration=86400
