--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,22 @@
 
-spring.datasource.url=${JDBC_DATABASE_URL}
-spring.datasource.username=${JDBC_DATABASE_USERNAME}
-spring.datasource.password=${JDBC_DATABASE_PASSWORD}
-spring.jpa.generate-ddl=true
-server.port=${PORT:8080}
-spring.jpa.show-sql=true
-grokonez.app.jwtSecret=jwtGrokonezSecretKey
-grokonez.app.jwtExpiration=86400
+#spring.datasource.url=${JDBC_DATABASE_URL}
+#spring.datasource.username=${JDBC_DATABASE_USERNAME}
+#spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+#spring.jpa.generate-ddl=true
+#server.port=${PORT:8080}
+#spring.jpa.show-sql=true
+#grokonez.app.jwtSecret=jwtGrokonezSecretKey
+#grokonez.app.jwtExpiration=86400
 
-#  spring.datasource.url=jdbc:mysql://localhost:3306/naftaldb?serverTimezone=UTC
-#  spring.datasource.username=root
-#  spring.datasource.password=root
-#  spring.jpa.generate-ddl=true
-# spring.jpa.properties.hibernate.generate_statistics=true
-#  server.port=8080
-#  spring.jpa.show-sql=true
-#  grokonez.app.jwtSecret=jwtGrokonezSecretKey
-#  grokonez.app.jwtExpiration=86400
+ spring.datasource.url=jdbc:mysql://localhost:3306/naftaldb?serverTimezone=UTC
+ spring.datasource.username=root
+ spring.datasource.password=root
+ spring.jpa.generate-ddl=true
+#spring.jpa.properties.hibernate.generate_statistics=true
+ server.port=8080
+ spring.jpa.show-sql=true
+ grokonez.app.jwtSecret=jwtGrokonezSecretKey
+ grokonez.app.jwtExpiration=28800
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=2MB
+spring.jackson.serialization.fail-on-empty-beans=false
